mw-validationpolicy.yaml
apiVersion: admissionregistration.k8s.io/v1alpha1
kind: ValidatingAdmissionPolicy
metadata:
  name: "mw-policy.example.com"
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:   ["work.open-cluster-management.io"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["manifestworks"]
  matchConditions:
    - name: "executor-set"
      expression: "has(object.spec.executor)&&object.spec.executor.subject.type=='ServiceAccount'"
  validations:
    - expression: "authorizer.group('work.open-cluster-management.io').resource('manifestworks').name('system:serviceaccount:'+object.spec.executor.subject.serviceAccount.namespace+':'+object.spec.executor.subject.serviceAccount.name).check('execute-as').allowed()"
      message: "missing executor permission"

---

apiVersion: admissionregistration.k8s.io/v1alpha1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "mw-policy-binding"
spec:
  policyName: "mw-policy.example.com"
  validationActions:
    - Deny
